[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI Gateway labs and experiments using Azure API Management"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "jsonref",
    "python-dotenv",
    "pandas",
    "matplotlib",
    "redis",
    "msal",
    "openai[realtime]",
    "azure-identity",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-openai-v2",
    "azure-monitor-opentelemetry",
    "azure-monitor-ingestion",
    "azure-ai-projects",
    "azure-ai-agents",
    "azure-ai-inference[prompts]",
    "azure-search-documents",
    "azure-functions",
    "azure-mgmt-apimanagement",
    "mcp>=1.24.0",
    "autogen-core",
    "autogen-ext[openai,azure,mcp]",
    "autogen-agentchat",
    "semantic-kernel[mcp]",
    "agent-framework",
]

[tool.uv]
package = false
prerelease = "allow"

# Pin pydantic to 2.12.x: semantic-kernel declares <2.12 but pydantic-core 2.33.x
# (used by pydantic 2.11) has no Python 3.14 wheels and fails to compile.
# Pydantic 2.12.x uses pydantic-core 2.41.x which ships Python 3.14 wheels.
override-dependencies = [
    "pydantic>=2.12,<2.13",
]
